<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/jcs_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/jcs_surface"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp">

        <Button
            android:id="@+id/upButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/folder_up"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="8dp"
            android:text="@string/folder_browser_title"
            android:textColor="@color/jcs_white"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/pathView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="@color/jcs_muted"
        android:textIsSelectable="true"
        android:textSize="12sp" />

    <Button
        android:id="@+id/systemPickerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/folder_system_picker"
        android:textAllCaps="false"
        android:visibility="gone" />

    <ListView
        android:id="@+id/folderList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="@color/jcs_divider"
        android:dividerHeight="1dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp" />

    <Button
        android:id="@+id/selectButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/jcs_purple"
        android:text="@string/folder_select"
        android:textAllCaps="false"
        android:textColor="@color/jcs_white" />
</LinearLayout>
